--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 
 /* Your CSS Code here. */
-
-	
-
-#heading{
-	color: white;
-	font-size: 20px;
+.main{
 	width: 200px;
 	background-color: purple;
 	border-left: solid 5px green;
 	padding: 10px;
+}
+#heading{
+	color: white;
+	font-size: 20px;
 }
